[gd_scene load_steps=22 format=3 uid="uid://h6qs28nw2xu0"]

[ext_resource type="Script" uid="uid://b7bwv7hvwye3y" path="res://Scripts/tram_scene.gd" id="1_qlsm1"]
[ext_resource type="Script" uid="uid://2nrcube3fr7q" path="res://Scripts/Tram/parallax_background.gd" id="2_cqi5x"]
[ext_resource type="Texture2D" uid="uid://dffhqcd0ti7p" path="res://Assets/Tram/day/day_sky.png" id="3_55tlu"]
[ext_resource type="Texture2D" uid="uid://vaurujj3dx2e" path="res://Assets/Tram/night/night_sky.png" id="4_g7uoi"]
[ext_resource type="Texture2D" uid="uid://bvdck63pb0s27" path="res://Assets/Tram/cloud_outline.png" id="5_inkxg"]
[ext_resource type="Texture2D" uid="uid://cqbqllrxwck78" path="res://Assets/Tram/day/day_clouds.png" id="6_pcc3a"]
[ext_resource type="Texture2D" uid="uid://d16o5xj4p0awo" path="res://Assets/Tram/night/night_clouds.png" id="7_xuh25"]
[ext_resource type="Texture2D" uid="uid://1p4bg4ce8awr" path="res://Assets/Tram/day/day_buildings_back.png" id="8_gq3dt"]
[ext_resource type="Texture2D" uid="uid://rlo66v4u5hha" path="res://Assets/Tram/night/night_buildings_back.png" id="9_p687b"]
[ext_resource type="Texture2D" uid="uid://c0a7q71ls5d16" path="res://Assets/Tram/day/day_buildings_front.png" id="10_ytes1"]
[ext_resource type="Texture2D" uid="uid://t5sm8seu1qpt" path="res://Assets/Tram/night/night_buildings_front.png" id="11_t5ihy"]
[ext_resource type="Texture2D" uid="uid://btnu0xryoxpx8" path="res://Assets/Tram/background_tram_inside.png" id="12_sq7lc"]
[ext_resource type="Texture2D" uid="uid://b786ak1kq2j1o" path="res://Assets/Tram/day/day_tram_lights.png" id="13_kfqh7"]
[ext_resource type="Texture2D" uid="uid://cadaviik482md" path="res://Assets/Tram/night/night_tram_lights.png" id="14_xddm6"]
[ext_resource type="Texture2D" uid="uid://dyjpmqg7s2dwe" path="res://Assets/Tram/firefly.png" id="15_wbbch"]
[ext_resource type="Script" uid="uid://wusueic5wnd8" path="res://Scripts/Tram/interactions.gd" id="16_iyawv"]
[ext_resource type="PackedScene" uid="uid://c1oq7xevew5jw" path="res://Scene/Tram/PhonePopup.tscn" id="17_s6t5j"]
[ext_resource type="Script" uid="uid://imqi7jo4fmhf" path="res://Scripts/interaction_popup.gd" id="18_rv5di"]

[sub_resource type="Animation" id="Animation_xjeqg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_e6itl"]
resource_name = "TramMovement"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.502376, 1, 1.5, 2.00169, 2.51701, 2.99728, 3.51961, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, -2), Vector2(-1, -3), Vector2(0, 4), Vector2(2, 1), Vector2(-2, -1), Vector2(1, 4), Vector2(0, -2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1s6la"]
_data = {
&"RESET": SubResource("Animation_xjeqg"),
&"TramMovement": SubResource("Animation_e6itl")
}

[node name="TramScene" type="Node2D"]
script = ExtResource("1_qlsm1")

[node name="TramExterior" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="TramExterior"]
script = ExtResource("2_cqi5x")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="TramExterior/ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(1183, 0)

[node name="DaySky" type="Sprite2D" parent="TramExterior/ParallaxBackground/ParallaxLayer3"]
scale = Vector2(0.462219, 0.462219)
texture = ExtResource("3_55tlu")
centered = false

[node name="NightSky" type="Sprite2D" parent="TramExterior/ParallaxBackground/ParallaxLayer3"]
visible = false
scale = Vector2(0.462219, 0.462219)
texture = ExtResource("4_g7uoi")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="TramExterior/ParallaxBackground"]
motion_scale = Vector2(1, 0)
motion_mirroring = Vector2(1183, 0)

[node name="CloudsOutline" type="Sprite2D" parent="TramExterior/ParallaxBackground/ParallaxLayer2"]
scale = Vector2(0.462219, 0.462219)
texture = ExtResource("5_inkxg")
centered = false

[node name="DayClouds" type="Sprite2D" parent="TramExterior/ParallaxBackground/ParallaxLayer2"]
modulate = Color(1, 1, 1, 0.603922)
scale = Vector2(0.462219, 0.462219)
texture = ExtResource("6_pcc3a")
centered = false

[node name="NightClouds" type="Sprite2D" parent="TramExterior/ParallaxBackground/ParallaxLayer2"]
visible = false
modulate = Color(1, 1, 1, 0.603922)
scale = Vector2(0.462219, 0.462219)
texture = ExtResource("7_xuh25")
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="TramExterior/ParallaxBackground"]
motion_scale = Vector2(2, 0)
motion_mirroring = Vector2(1183, 0)

[node name="DayBuildingsBack" type="Sprite2D" parent="TramExterior/ParallaxBackground/ParallaxLayer"]
scale = Vector2(0.462219, 0.462219)
texture = ExtResource("8_gq3dt")
centered = false

[node name="NightBuildingsBack" type="Sprite2D" parent="TramExterior/ParallaxBackground/ParallaxLayer"]
visible = false
scale = Vector2(0.462219, 0.462219)
texture = ExtResource("9_p687b")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="TramExterior/ParallaxBackground"]
motion_scale = Vector2(3, 0)
motion_mirroring = Vector2(1183, 0)

[node name="DayBuildingsFront" type="Sprite2D" parent="TramExterior/ParallaxBackground/ParallaxLayer4"]
scale = Vector2(0.462219, 0.462219)
texture = ExtResource("10_ytes1")
centered = false

[node name="NightBuildingsFront" type="Sprite2D" parent="TramExterior/ParallaxBackground/ParallaxLayer4"]
visible = false
scale = Vector2(0.462219, 0.462219)
texture = ExtResource("11_t5ihy")
centered = false

[node name="TramInterior" type="Node2D" parent="."]

[node name="TramInside2" type="Sprite2D" parent="TramInterior"]
position = Vector2(-27, -15)
scale = Vector2(0.470392, 0.470392)
texture = ExtResource("12_sq7lc")
centered = false

[node name="DayLights" type="Sprite2D" parent="TramInterior"]
visible = false
position = Vector2(-27, -15)
scale = Vector2(0.470392, 0.470392)
texture = ExtResource("13_kfqh7")
centered = false

[node name="NightLights" type="Sprite2D" parent="TramInterior"]
position = Vector2(-27, -15)
scale = Vector2(0.470392, 0.470392)
texture = ExtResource("14_xddm6")
centered = false

[node name="Firefly" type="Sprite2D" parent="TramInterior"]
position = Vector2(250, 369)
scale = Vector2(0.320213, 0.320213)
texture = ExtResource("15_wbbch")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TramInterior"]
libraries = {
&"": SubResource("AnimationLibrary_1s6la")
}

[node name="Interactions" type="Node2D" parent="."]
script = ExtResource("16_iyawv")

[node name="PhonePopup" parent="Interactions" instance=ExtResource("17_s6t5j")]
position = Vector2(726, 78)
scale = Vector2(1.34046, 1.34046)
script = ExtResource("18_rv5di")
